# symplasma

./: Cargo.toml  README.md  flake.nix
design/: Rust Configuration Crates.md  overview.md  rust-configuration-crates.md  rust-enum-crates.md  rust-file-listing-crates.md  rust-mime-crates.md
src/: cli.rs  config.rs  lib.rs  main.rs  options.rs  sources.rs
src/kind/: markdown.rs  mod.rs  traits.rs  util.rs  videos.rs  web_archives.rs  web_scrap_book_archive.rs
src/model/: file_path.rs  link.rs  mod.rs
