[package]
name = "symplasma"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause" # https://spdx.org/licenses/
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A protocol for distributed and secure knowledge managemnent."
repository = "https://github.com/symplasma/symplasma"
readme = "README.md"
keywords = [
    "distributed",
    "protocol",
    "knowledge-managemnent",
] # free text, 5 keywords max
categories = ["command-line-utilities"] # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider.*"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "symplasma"
path = "src/lib.rs"

[[bin]]
name = "symplasma"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
confique = { version = "0.4.0", default-features = false }
directories = "6"
serde-kdl2 = "0"
serde = { version = "1", features = ["derive"] }
ignore = "0.4.25"
mime-type = "0.2.0"
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
color-eyre = "0.6.5"
scraper = "0.27.0"
webpage = "2.0.1"
open = "5.4.0"
tree_magic_mini = "3.2.2"
infer = "0.19.0"
mime_guess = "2.0.5"
const_format = "0.2.36"
coarsetime = "0.1.37"
indoc = "2.0.7"
url = "2.5.8"
